objects/IAM_Application__c.object
<CustomObject>
    <fields>
        <fullName>IAM_Role__c</fullName>
        <label>Role/Feature</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>IAM_Application_Name__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AccountExecutive</fullName>
                </value>
                <value>
                    <fullName>AccountManager</fullName>
                </value>
                <value>
                    <fullName>Admin</fullName>
                </value>
                <value>
                    <fullName>Advance</fullName>
                </value>
                <value>
                    <fullName>Advanced</fullName>
                </value>
                <value>
                    <fullName>API Developer</fullName>
                </value>
                <value>
                    <fullName>API Owner</fullName>
                </value>
                <value>
                    <fullName>Application Manager</fullName>
                </value>
                <value>
                    <fullName>Applications Developer</fullName>
                </value>
                <value>
                    <fullName>BASIC</fullName>
                </value>
                <value>
                    <fullName>Beta Testing Guidanz Mobile</fullName>
                </value>
                <value>
                    <fullName>Channel Admin</fullName>
                </value>
                <value>
                    <fullName>CLAIMFILER</fullName>
                </value>
                <value>
                    <fullName>CUMMINS</fullName>
                </value>
                <value>
                    <fullName>CUMMINSBASIC</fullName>
                </value>
                <value>
                    <fullName>CumminsCare</fullName>
                </value>
                <value>
                    <fullName>CumminsTechnician</fullName>
                </value>
                <value>
                    <fullName>Customer Admin</fullName>
                </value>
                <value>
                    <fullName>Customer View and Pay</fullName>
                </value>
                <value>
                    <fullName>Dealer Admin</fullName>
                </value>
                <value>
                    <fullName>Dealer User</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>Distributor Admin</fullName>
                </value>
                <value>
                    <fullName>Distributor Customer Support Manager</fullName>
                </value>
                <value>
                    <fullName>Distributor Customer Support Rep</fullName>
                </value>
                <value>
                    <fullName>Distributor DFSE</fullName>
                </value>
                <value>
                    <fullName>Distributor Sales Manager</fullName>
                </value>
                <value>
                    <fullName>Distributor Sales Representative</fullName>
                </value>
                <value>
                    <fullName>Enabler</fullName>
                </value>
                <value>
                    <fullName>Engineer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IAM_Source__c</fullName>
        <defaultValue>&quot;WEB&quot;</defaultValue>
        <label>Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Pending Contact Approval</fullName>
                </value>
                <value>
                    <fullName>Active-Indemnified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IAM_Subscription_Count__c</fullName>
        <defaultValue>99999</defaultValue>
        <label>Max allowed Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IAM_Subscription_End_Date__c</fullName>
        <defaultValue>IF($RecordType.DeveloperName = &quot;IAM_EDS_Application&quot;  || $RecordType.DeveloperName = &quot;IAM_ProMotion_application&quot; || $RecordType.DeveloperName = &quot;IAM_Guidanz_Mobile&quot; ||
$RecordType.DeveloperName = &quot;IAM_Quick_Serve_Online&quot; || 
$RecordType.DeveloperName = &quot;INSITE&quot; , null, DATE(2100,12,31))</defaultValue>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IAM_Subscription_Id__c</fullName>
        <label>Subscription id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IAM_Subscription_Name__c</fullName>
        <label>Subscription Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Subscription_Start_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IAM_Total_Units__c</fullName>
        <description>It is taken as input when the user creates Assign App Feature record for GM or Field Test Fleet/Zapit/Zapit OEM Count Subscriptions.</description>
        <label>Total Units</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IAM_Username__c</fullName>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_swregExpire__c</fullName>
        <label>SW Reg Expiration</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Allowed_Users__c</fullName>
        <formula>IF(OSM_Max_Allowed_Users__c &gt;0,OSM_Max_Allowed_Users__c ,IAM_Subscription_Count__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Max Allowed Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OSM_Active_Subscription_Count__c</fullName>
        <description>Number of active subscriptions based on OSM junction object</description>
        <label>OSM Active Subscription Count</label>
        <summaryFilterItems>
            <field>OSM_Subscription_Account_Provision__c.Subscription_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryForeignKey>OSM_Subscription_Account_Provision__c.Account_Features_Access__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OSM_Final_End_Date__c</fullName>
        <label>OSM Final End Date</label>
        <summarizedField>OSM_Subscription_Account_Provision__c.Subscription_End_Date__c</summarizedField>
        <summaryFilterItems>
            <field>OSM_Subscription_Account_Provision__c.Subscription_Status__c</field>
            <operation>notContain</operation>
            <value>Cancel</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OSM_Subscription_Account_Provision__c.Subscription_Status__c</field>
            <operation>notContain</operation>
            <value>Revoke</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OSM_Subscription_Account_Provision__c.Subscription_Status__c</field>
            <operation>notContain</operation>
            <value>Expire</value>
        </summaryFilterItems>
        <summaryForeignKey>OSM_Subscription_Account_Provision__c.Account_Features_Access__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OSM_Max_Allowed_Users__c</fullName>
        <label>OSM Max Allowed Users</label>
        <summarizedField>OSM_Subscription_Account_Provision__c.User_Count__c</summarizedField>
        <summaryFilterItems>
            <field>OSM_Subscription_Account_Provision__c.Subscription_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryForeignKey>OSM_Subscription_Account_Provision__c.Account_Features_Access__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OSM_SW_Total_Subscription_Quantity__c</fullName>
        <label>Total Subscription Quantity</label>
        <summarizedField>OSM_Subscription_Account_Provision__c.OSM_SW_Subscription_Quantity__c</summarizedField>
        <summaryFilterItems>
            <field>OSM_Subscription_Account_Provision__c.Subscription_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryForeignKey>OSM_Subscription_Account_Provision__c.Account_Features_Access__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Test_Vamsi__c</fullName>
        <label>Test Vamsi</label>
        <type>TextArea</type>
    </fields>
    <label>Account Features &amp; Access</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>IAM_Account_Name__c</columns>
        <columns>IAM_Application_Name__c</columns>
        <columns>IAM_Role__c</columns>
        <columns>IAM_Free_Subscription__c</columns>
        <columns>IAM_Subscription_Name__c</columns>
        <columns>IAM_Subscription_Count__c</columns>
        <columns>IAM_Provisioned_User_Count__c</columns>
        <columns>IAM_Subscription_Start_Date__c</columns>
        <columns>IAM_Subscription_End_Date__c</columns>
        <columns>IAM_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IAM_Application_Name__c</field>
            <operation>contains</operation>
            <value>Guidanz</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BOX_Admin_Queue_IAM_Application</fullName>
        <filterScope>Queue</filterScope>
        <label>BOX Admin Queue</label>
        <queue>BOX_Admin_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Box_Admins_IAM_Application</fullName>
        <filterScope>Queue</filterScope>
        <label>Box Admins</label>
        <queue>Box_Admins</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IAM_Archer_Admins_IAM_Application</fullName>
        <filterScope>Queue</filterScope>
        <label>Archer Admins</label>
        <queue>IAM_Archer_Admins</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IAM_BOX_External_Partners_IAM_Application</fullName>
        <filterScope>Queue</filterScope>
        <label>IAM BOX External Partners</label>
        <queue>IAM_BOX_External_Partners</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IAM_CS_Queue_IAM_Application</fullName>
        <filterScope>Queue</filterScope>
        <label>IAM CS Queue</label>
        <queue>IAM_CS_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IAM_Connected_Solutions_IAM_Application</fullName>
        <filterScope>Queue</filterScope>
        <label>IAM Connected Solutions</label>
        <queue>IAM_Connected_Solutions</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IAM_Cummins_API_Portal_Admins_IAM_Application</fullName>
        <filterScope>Queue</filterScope>
        <label>Cummins API Portal Admins</label>
        <queue>IAM_Cummins_API_Portal_Admins</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IAM_Cummins_Service_Training_IAM_Application</fullName>
        <filterScope>Queue</filterScope>
        <label>IAM Cummins Service Training</label>
        <queue>IAM_Cummins_Service_Training</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IAM_Cumpas_2_0_IAM_Application</fullName>
        <filterScope>Queue</filterScope>
        <label>IAM Cumpas 2.0</label>
        <queue>IAM_Cumpas_2_0</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IAM_Cumpas_BusinessAdmins_IAM_Application</fullName>
        <filterScope>Queue</filterScope>
        <label>IAM_Cumpas_BusinessAdmins</label>
        <queue>IAM_Cumpas_BusinessAdmins</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IAM_DA_BusinessAdmins_IAM_Application</fullName>
        <filterScope>Queue</filterScope>
        <label>IAM_DA_BusinessAdmins</label>
        <queue>IAM_DA_BusinessAdmins</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IAM_DA_Business_Admins_IAM_Application</fullName>
        <filterScope>Queue</filterScope>
        <label>IAM_DA_Business_Admins</label>
        <queue>IAM_DA_Business_Admins</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IAM_EDS_IAM_Application</fullName>
        <filterScope>Queue</filterScope>
        <label>IAM EDS</label>
        <queue>IAM_EDS</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IAM_Guidanz_Mobile_IAM_Application</fullName>
        <filterScope>Queue</filterScope>
        <label>IAM Guidanz Mobile</label>
        <queue>IAM_Guidanz_Mobile</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Access Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Features &amp; Access</pluralLabel>
    <recordTypes>
        <fullName>Archer</fullName>
        <active>true</active>
        <label>Archer</label>
    </recordTypes>
    <recordTypes>
        <fullName>BOX</fullName>
        <active>true</active>
        <description>For China BOX application acccess</description>
        <label>BOX</label>
    </recordTypes>
    <recordTypes>
        <fullName>BOX_External_Partners</fullName>
        <active>true</active>
        <description>For China BOX application acccess</description>
        <label>BOX External Partners</label>
    </recordTypes>
    <recordTypes>
        <fullName>CARE</fullName>
        <active>true</active>
        <description>This record type is for ABO INDA  Business admin to make him access only ABO  in application field</description>
        <label>CARE</label>
    </recordTypes>
    <recordTypes>
        <fullName>Cummins_API_Portal</fullName>
        <active>true</active>
        <label>Cummins API Portal</label>
    </recordTypes>
    <recordTypes>
        <fullName>DBU_EFSR</fullName>
        <active>true</active>
        <description>India ABO DBU Service Cloud</description>
        <label>DBU EFSR</label>
    </recordTypes>
    <recordTypes>
        <fullName>Electrified_Powertrain_Specification_Tool</fullName>
        <active>true</active>
        <label>Electrified Powertrain Specification Tool</label>
    </recordTypes>
    <recordTypes>
        <fullName>Fleetguard_FIT</fullName>
        <active>true</active>
        <label>Fleetguard FIT</label>
    </recordTypes>
    <recordTypes>
        <fullName>FluidWatch</fullName>
        <active>true</active>
        <label>FluidWatch</label>
    </recordTypes>
    <recordTypes>
        <fullName>Fluids_Registration</fullName>
        <active>true</active>
        <label>Fluids Registration</label>
    </recordTypes>
    <recordTypes>
        <fullName>HighRadius</fullName>
        <active>true</active>
        <label>HighRadius</label>
    </recordTypes>
    <recordTypes>
        <fullName>IAM_CSS</fullName>
        <active>true</active>
        <description>Admin Managed – Web based tool that provides a common interface to Cummins service systems used during a service event from customer intake through a guided workflow for fault code analysis and repair. Also includes service history and service links.</description>
        <label>Guidanz Web</label>
    </recordTypes>
    <recordTypes>
        <fullName>IAM_Cumpas</fullName>
        <active>true</active>
        <description>Admin Managed -Web based tool that enables dealers and major distribution customers to perform order management and core management functions without the direct assistance of a Cummins distributor.</description>
        <label>CUMPAS 2.0</label>
    </recordTypes>
    <recordTypes>
        <fullName>IAM_EDS_Application</fullName>
        <active>true</active>
        <description>Subscription Managed – Expert Diagnostic System (EDS) - Web based engine diagnostic tool that improves troubleshooting efficiency and reduces diagnostic steps up to 50% by leveraging a database of real-world repair reports from around the globe.</description>
        <label>EDS</label>
    </recordTypes>
    <recordTypes>
        <fullName>IAM_FT_NPBU_Diagnostics</fullName>
        <active>true</active>
        <description>Energize - Admin Managed</description>
        <label>FT - NPBU Diagnostics</label>
    </recordTypes>
    <recordTypes>
        <fullName>IAM_Field_Test_Guidanz_Mobile</fullName>
        <active>true</active>
        <description>Free application/subscription for Guidanz Mobile users</description>
        <label>Field Test Guidanz Mobile</label>
    </recordTypes>
    <recordTypes>
        <fullName>IAM_Global_Dealer_Portal</fullName>
        <active>true</active>
        <label>Global Dealer Portal</label>
    </recordTypes>
    <recordTypes>
        <fullName>IAM_Guidanz</fullName>
        <active>true</active>
        <description>Admin Managed – Web based tool that provides a common interface to Cummins service systems used during a service event from customer intake through a guided workflow for fault code analysis and repair. Also includes service history and service links.</description>
        <label>Guidanz</label>
    </recordTypes>
    <recordTypes>
        <fullName>IAM_Guidanz_Mobile</fullName>
        <active>true</active>
        <description>Subscription Managed- When paired with INLINE mini or INLINE 7 allows you to quickly determine the cause of your fault lamp. It can also run diagnostic tests, modify operating parameters and update calibrations with right access level and subscription</description>
        <label>Guidanz Mobile</label>
    </recordTypes>
    <recordTypes>
        <fullName>IAM_Guidanz_Service_Portal</fullName>
        <active>true</active>
        <label>Guidanz Service Portal</label>
    </recordTypes>
    <recordTypes>
        <fullName>IAM_India_ABO</fullName>
        <active>true</active>
        <description>This record type is for ABO INDA  Business admin to make him access only ABO  in application field</description>
        <label>India ABO</label>
    </recordTypes>
    <recordTypes>
        <fullName>IAM_PC_Application</fullName>
        <active>true</active>
        <description>This record type is for PC Business admin to make him access only PC in application field</description>
        <label>Connected Solutions</label>
    </recordTypes>
    <recordTypes>
        <fullName>IAM_ProMotion_application</fullName>
        <active>true</active>
        <description>Subscription Managed – Cummins Service Training (CST) - Web based tool that enables technicians to take and track completed in-person and online training courses to educate them on how to perform safe warrant-able service events on Cummins products.</description>
        <label>Cummins Service Training</label>
    </recordTypes>
    <recordTypes>
        <fullName>IAM_Quick_Serve_Online</fullName>
        <active>true</active>
        <description>Subscription Managed - QuickServe Online (QSOL) - Web based tool offering Parts, Service and Warranty information for engines and power generation products.</description>
        <label>QuickServe Online</label>
    </recordTypes>
    <recordTypes>
        <fullName>IAM_RLS_Application</fullName>
        <active>true</active>
        <description>This record type is for RLS Business admin to make him access only RLS in application field</description>
        <label>Repair logistics and Service</label>
    </recordTypes>
    <recordTypes>
        <fullName>IAM_Rapid_Serve_Web</fullName>
        <active>true</active>
        <label>Rapid Serve Web</label>
    </recordTypes>
    <recordTypes>
        <fullName>IAM_WWSPS</fullName>
        <active>true</active>
        <label>WWSPS</label>
    </recordTypes>
    <recordTypes>
        <fullName>INSITE</fullName>
        <active>true</active>
        <description>record type for Insite Application</description>
        <label>INSITE</label>
    </recordTypes>
    <recordTypes>
        <fullName>Identity_And_Access_Management</fullName>
        <active>true</active>
        <label>Identity And Access Management</label>
    </recordTypes>
    <recordTypes>
        <fullName>Marketplace</fullName>
        <active>true</active>
        <label>Marketplace</label>
    </recordTypes>
    <recordTypes>
        <fullName>Mexico_Warranty</fullName>
        <active>true</active>
        <label>Mexico Warranty</label>
    </recordTypes>
    <recordTypes>
        <fullName>My_Fleetguard_Customer_Portal</fullName>
        <active>true</active>
        <label>My Fleetguard Customer Portal</label>
    </recordTypes>
    <recordTypes>
        <fullName>NextGen</fullName>
        <active>true</active>
        <label>NextGen</label>
    </recordTypes>
    <recordTypes>
        <fullName>PowerSpec</fullName>
        <active>true</active>
        <description>Record type for PowerSpec</description>
        <label>PowerSpec</label>
    </recordTypes>
    <recordTypes>
        <fullName>Shop_Cummins_Online_Store</fullName>
        <active>true</active>
        <label>Shop Cummins Online Store</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>IAM_Account_Change</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED(IAM_Account_Name__c)</errorConditionFormula>
        <errorDisplayField>IAM_Account_Name__c</errorDisplayField>
        <errorMessage>You cannot re-assign the Feature Record to another Location</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IAM_ApplicationName_Change</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
OR(
ISCHANGED(IAM_Subscription_Name__c),
ISCHANGED(IAM_Application_Name__c),
ISCHANGED(IAM_Free_Subscription__c),
ISCHANGED(IAM_Source__c),
ISCHANGED(IAM_Role__c)
),
OR(
ISPICKVAL(IAM_Application_Name__c, &apos;Field Test Guidanz Mobile&apos; ),
ISPICKVAL(IAM_Application_Name__c, &apos;FT - NPBU Diagnostics&apos; )
)
)</errorConditionFormula>
        <errorMessage>Application Name/Subscription Name/Source/Role of a record cannot be changed once created. Instead please inactivate this record and create a new.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IAM_Check_To_Populate_Fields</fullName>
        <active>true</active>
        <description>Validation rule to check if free subscription flag  is false, need to make sure that Start date,end date and Subscription Count are populated</description>
        <errorConditionFormula>AND(
AND(
IAM_Subscription_Name__c &lt;&gt;  &apos;Guidanz Mobile CalAssist Units&apos;,
IAM_Subscription_Name__c &lt;&gt;  &apos;Guidanz Mobile Intapp Units&apos;,
IAM_Subscription_Name__c &lt;&gt; &apos;Guidanz Mobile Intapp OEM Units&apos;
),
 IAM_Free_Subscription__c = false,
OR(
 ISBLANK( IAM_Subscription_Count__c ),
 ISBLANK( IAM_Subscription_Start_Date__c ),
 ISBLANK( IAM_Subscription_End_Date__c )
)
)</errorConditionFormula>
        <errorMessage>For a Subscribed application, the fields &quot;Subscription Count&quot;, Subscription Start Date&quot; &amp; &quot;Subscription End Date&quot; cannot be blank.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IAM_Count_Subscription_Revoke_Condition</fullName>
        <active>true</active>
        <description>Units at location level cannot be revoked if those are assigned to users.</description>
        <errorConditionFormula>AND(OR(INCLUDES(IAM_Role__c, &apos;Guidanz Mobile CalAssist Units&apos;),
INCLUDES(IAM_Role__c, &apos;Guidanz Mobile Intapp Units&apos;),
INCLUDES(IAM_Role__c, &apos;Guidanz Mobile Intapp OEM Units&apos;),
INCLUDES(IAM_Role__c, &apos;Field Test CalAssist Units Guidanz Mobile&apos;),
INCLUDES(IAM_Role__c, &apos;Field Test Intapp Units Guidanz Mobile&apos;),
INCLUDES(IAM_Role__c, &apos;Field Test Intapp OEM Units Guidanz Mobile&apos;)),  ISCHANGED(IAM_Total_Units__c), IAM_Total_Units__c &lt; IAM_Assigned_Units__c)</errorConditionFormula>
        <errorMessage>Units at location cannot be revoked if those are already assigned to Users.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IAM_Dealer_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
OR(ISPICKVAL(IAM_Account_Name__r.Type , &quot;Dealer Account&quot;),ISPICKVAL(IAM_Account_Name__r.Type , &quot;Dealer Branch Account&quot;)), 
  ISPICKVAL(IAM_Application_Name__c , &quot;Global Dealer Portal&quot;),
  INCLUDES(IAM_Role__c, &quot;Non-Dealer User&quot;)
)</errorConditionFormula>
        <errorMessage>Only Dealer User can be selected when location is Dealer Branch</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IAM_End_Date_Validation_FTNPBU_IntrLoc</fullName>
        <active>true</active>
        <errorConditionFormula>AND($Profile.Name &lt;&gt; &quot;System Administrator&quot;,
ISPICKVAL(IAM_Application_Name__c, &apos;FT - NPBU Diagnostics&apos;),
ISPICKVAL( IAM_Account_Name__r.Type , &apos;Internal&apos;),
IAM_Account_Name__r.IAM_Internal_Account__c=True,
ISPICKVAL( IAM_Status__c, &apos;Active&apos;),
ISCHANGED(IAM_Subscription_End_Date__c)
)</errorConditionFormula>
        <errorMessage>Only System Admins can update the end date for &apos;FT-NPBU Diagnostics&apos; subscription for Internal locations !</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IAM_End_Date_Validation_FTNPBU_NonIntrL</fullName>
        <active>true</active>
        <errorConditionFormula>AND($Profile.Name &lt;&gt; &quot;System Administrator&quot; , $User.Username &lt;&gt;  $Label.IAM_FTNPBU_Validation_UserName1, $User.Username &lt;&gt;  $Label.IAM_FTNPBU_Validation_UserName2 ,$User.Username &lt;&gt;  $Label.IAM_FTNPBU_Validation_UserName3 ,
ISPICKVAL(IAM_Application_Name__c, &apos;FT - NPBU Diagnostics&apos;),
NOT(
AND(
ISPICKVAL( IAM_Account_Name__r.Type , &apos;Internal&apos;),
IAM_Account_Name__r.IAM_Internal_Account__c=True
)
),
ISPICKVAL( IAM_Status__c, &apos;Active&apos;),
ISCHANGED(IAM_Subscription_End_Date__c)
)</errorConditionFormula>
        <errorMessage>&apos;FT-NPBU Diagnostics&apos; subscription&apos;s end date for non - Internal Location can only be updated by Carl, Kiran and Louis</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IAM_Free_Application_Check_Box</fullName>
        <active>true</active>
        <description>this is to make sure we should not populate free check box on Subscribed applications</description>
        <errorConditionFormula>AND(
OR( ISPICKVAL( IAM_Application_Name__c , &quot;Guidanz Mobile&quot;),
ISPICKVAL( IAM_Application_Name__c , &quot;EDS&quot;),
ISPICKVAL( IAM_Application_Name__c , &quot;INSITE&quot;),
ISPICKVAL( IAM_Application_Name__c , &quot;QuickServe Online&quot;)
),
OR(
IAM_Free_Subscription__c=true,
(ISBLANK( IAM_Subscription_Name__c ) || ISNULL(IAM_Subscription_Name__c ) )
), $Profile.Name &lt;&gt; &quot;System Administrator&quot;,$Profile.Name &lt;&gt; &quot;CSS Integration&quot;,$Profile.Name &lt;&gt; &quot;IAM_Integration_User&quot;,$Profile.Name &lt;&gt; &quot;IAM_Application_Support_Advanced&quot;
)</errorConditionFormula>
        <errorDisplayField>IAM_Account_Name__c</errorDisplayField>
        <errorMessage>Selected application access to a location can be only given through Subscription purchase process done via Software Registration or Market Place.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IAM_Free_Application_Check_Box_CST</fullName>
        <active>true</active>
        <description>This is for CST application only.this is to make sure we should not populate free check box on Subscribed applications</description>
        <errorConditionFormula>AND(
ISPICKVAL( IAM_Application_Name__c , &quot;Cummins Service Training&quot;),
OR(
IAM_Free_Subscription__c=true,
(ISBLANK( IAM_Subscription_Name__c ) || ISNULL(IAM_Subscription_Name__c ) )
), $Profile.Name &lt;&gt; &quot;System Administrator&quot;,$Profile.Name &lt;&gt; &quot;CSS Integration&quot;,$Profile.Name &lt;&gt; &quot;IAM_Integration_User&quot;,$User.IAM_UID__c&lt;&gt;&apos;hk704&apos;,$User.IAM_UID__c&lt;&gt;&apos;av032&apos;,$User.IAM_UID__c&lt;&gt;&apos;ci886&apos;
)</errorConditionFormula>
        <errorDisplayField>IAM_Account_Name__c</errorDisplayField>
        <errorMessage>Selected application access to a location can be only given through Subscription purchase process done via Software Registration or Market Place</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IAM_Mandate_Total_Count</fullName>
        <active>true</active>
        <description>Total Units field should be mandatory for all units subscriptions</description>
        <errorConditionFormula>AND(OR(INCLUDES(IAM_Role__c, &apos;Guidanz Mobile CalAssist Units&apos;),
INCLUDES(IAM_Role__c, &apos;Guidanz Mobile Intapp Units&apos;),
INCLUDES(IAM_Role__c, &apos;Guidanz Mobile Intapp OEM Units&apos;),
INCLUDES(IAM_Role__c, &apos;Field Test CalAssist Units Guidanz Mobile&apos;),
INCLUDES(IAM_Role__c, &apos;Field Test Intapp Units Guidanz Mobile&apos;),
INCLUDES(IAM_Role__c, &apos;Field Test Intapp OEM Units Guidanz Mobile&apos;)),  ISBLANK( IAM_Total_Units__c ))</errorConditionFormula>
        <errorMessage>Total Units is mandatory for all units subscriptions.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IAM_Non_Dealer_Role</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
AND(NOT(ISPICKVAL(IAM_Account_Name__r.Type , &quot;Dealer Account&quot;)),NOT(ISPICKVAL(IAM_Account_Name__r.Type , &quot;Dealer Branch Account&quot;))), 
  ISPICKVAL(IAM_Application_Name__c , &quot;Global Dealer Portal&quot;),
  INCLUDES(IAM_Role__c, &quot;Dealer User&quot;)
)</errorConditionFormula>
        <errorMessage>Only Non-Dealer User can be selected when Location is Non Dealer Branch.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IAM_Restrict_Name_Change</fullName>
        <active>false</active>
        <description>This rule is to make sure we do not allow user to change applicaiton and Role/feature</description>
        <errorConditionFormula>AND( 
NOT(ISBLANK( PRIORVALUE( IAM_Subscription_Name__c ) ) ), 
NOT(ISBLANK( PRIORVALUE( IAM_Account_Name__c ) ) ), 
NOT(ISBLANK( PRIORVALUE( IAM_Application_Name__c ) ) ), 
NOT(ISBLANK( PRIORVALUE( IAM_Role__c ) ) ), 
OR( 
ISCHANGED(IAM_Subscription_Name__c ), 
ISCHANGED(IAM_Account_Name__c ), 
ISCHANGED(IAM_Application_Name__c), 
AND( 
ISCHANGED(IAM_Role__c), NOT(ISPICKVAL(IAM_Application_Name__c, &apos;QuickServe Online&apos; )) 
) 
) 
)</errorConditionFormula>
        <errorMessage>Cannot change the Application or Role/Feature value for already created record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IAM_Restrict_Provisioned_User_Count</fullName>
        <active>true</active>
        <description>To restrict provisioned user count till number of max allowed users</description>
        <errorConditionFormula>AND((IAM_Provisioned_Count__c &gt; Max_Allowed_Users__c),
NOT(AND( OR(ISPICKVAL(IAM_Application_Name__c, &quot;Guidanz Mobile&quot;),ISPICKVAL(IAM_Application_Name__c, &quot;Field Test Guidanz Mobile&quot;)),(CONTAINS(IAM_Subscription_Name__c , &quot;Units&quot;))))
)</errorConditionFormula>
        <errorMessage>Provisioned Count cannot be more than Max Allowed Users.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IAM_Role_Required</fullName>
        <active>true</active>
        <description>Role is required for all Apps except for Guidanz Mobile Application</description>
        <errorConditionFormula>AND( NOT(ISPICKVAL(IAM_Application_Name__c, &apos;Guidanz Mobile&apos;)), ISBLANK(IAM_Role__c))</errorConditionFormula>
        <errorMessage>Please enter the Role</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Qsol_Expiration</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(IAM_Application_Name__c, &apos;QuickServe Online&apos;),  ISPICKVAL( IAM_Status__c , &apos;Active&apos;), IAM_Qsolexpiration__c == &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>IAM_Qsolexpiration__c</errorDisplayField>
        <errorMessage>Please enter Qsol Expiration</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Qsol_View</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ISPICKVAL(IAM_Application_Name__c, &apos;QuickServe Online&apos;), IAM_Qsolview__c == &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>IAM_Qsolview__c</errorDisplayField>
        <errorMessage>Please enter Qsol View .</errorMessage>
    </validationRules>
</CustomObject>